@@ -6,15 +6,8 @@
 
 static int
 dir_array_strdiff(const char *a, const char *b, void *x) { return str_diff(a, b); }
-
 void
 dir_array_rewind(struct dir_array *da) { da->p = 0; }
-
-void
-dir_array_setcmp(struct dir_array *da, int (*func)(const char *, const char *, void *))
-{
-  da->cmp = func;
-}
 
 int
 dir_array_next(struct dir_array *da, char **p)
@@ -77,8 +70,19 @@ dir_array_sort(struct dir_array *da)
   } 
 }
 
+void
+dir_array_init(struct dir_array *da)
+{
+  da->a = 0;
+  da->p = 0;
+  da->n = 0;
+  da->cmp = dir_array_strdiff;
+  da->filter = 0;
+  da->data = 0;
+}
+
 int
-dir_array_init(struct dir_array *da, const char *p)
+dir_array_open(struct dir_array *da, const char *p)
 {
   DIR *dir;
   direntry *d_ent;
@@ -93,11 +97,12 @@ dir_array_init(struct dir_array *da, const char *p)
   for (;;) {
     d_ent = readdir(dir);
     if (!d_ent) break;
+    if (da->filter)
+      if (!da->filter(d_ent->d_name, da->data)) continue;
     ++n;
   }
   rewinddir(dir);
 
-  da->cmp = dir_array_strdiff;
   da->p = 0;
   da->n = n;
   da->a = alloc(n * sizeof(char *));
@@ -113,6 +118,8 @@ dir_array_init(struct dir_array *da, const char *p)
     if (!d_ent) break;
     len = str_len(d_ent->d_name);
     if (!len) continue;
+    if (da->filter)
+      if (!da->filter(d_ent->d_name, da->data)) continue;
     tmp = alloc(len + 1);
     if (!tmp) goto NOMEM;
     bin_copy(d_ent->d_name, tmp, len);
@@ -145,6 +152,7 @@ void dir_array_free(struct dir_array *da)
   da->p = 0;
   da->n = 0;
   da->cmp = 0;
-
+  da->filter = 0;
+  da->data = 0;
   return;
 }
